# capstone_sem2_major

./: LICENSE  Makefile  README.md  pyproject.toml
capstone_sem2_major/: __init__.py  dataset.py  features.py  plots.py
capstone_sem2_major/modeling/: predict.py  train.py
docs/: mkdocs.yml  reflection.txt  todo.txt
docs/docs/: index.md
