[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "capstone_sem2_major"
version = "0.0.1"
description = "Major assignment for seminar week 2 of capstone class. Cookiecutter template and S3 connection."
authors = [
  { name = "Emily Donofrio" },
]
license = { file = "LICENSE" }
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License"
]
dependencies = [
    "awscli",
    "ipython",
    "jupyterlab",
    "loguru",
    "matplotlib",
    "mkdocs",
    "notebook",
    "numpy",
    "pandas",
    "pip",
    "python-dotenv",
    "ruff",
    "scikit-learn",
    "tqdm",
    "typer",
]
requires-python = "==3.11.5"


[tool.ruff]
line-length = 99
src = ["capstone_sem2_major"]
include = ["pyproject.toml", "capstone_sem2_major/**/*.py"]

[tool.ruff.lint]
extend-select = ["I"]  # Add import sorting

[tool.ruff.lint.isort]
known-first-party = ["capstone_sem2_major"]
force-sort-within-sections = true

